// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> it renders with addition 1`] = `
<h1
  className="mfui-header mfui-header_color_black mfui-header_level_h1 mfui-header_h-align_left"
>
  <div
    className="mfui-header__addition"
  >
    <div />
  </div>
</h1>
`;

exports[`<Header /> it renders with children 1`] = `
<h1
  className="mfui-header mfui-header_color_black mfui-header_level_h1 mfui-header_h-align_left"
>
  <section />
</h1>
`;

exports[`<Header /> it renders with text align center 1`] = `
<h1
  className="mfui-header mfui-header_color_black mfui-header_level_h1 mfui-header_h-align_center"
/>
`;

exports[`<Header /> it renders with white color class 1`] = `
<h1
  className="mfui-header mfui-header_color_white mfui-header_level_h1 mfui-header_h-align_left"
/>
`;

exports[`<Header /> it renders without class margin 1`] = `
<h1
  className="mfui-header mfui-header_color_black mfui-header_level_h1 mfui-header_h-align_left"
/>
`;
